force-app/main/default/objects/DD_Commission__c/DD_Commission__c.object-meta.xml
<CustomObject>
    <description>Broker/producer commission tracking</description>
    <label>Commission</label>
    <nameField><displayFormat>COM-{000000}</displayFormat><label>Commission ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>