force-app/main/default/objects/DD_Commission__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Calculated commission amount</description>
</CustomField>