force-app/main/default/objects/DD_Commission__c/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <required>true</required><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>New Business</fullName><default>false</default><label>New Business</label></value><value><fullName>Renewal</fullName><default>false</default><label>Renewal</label></value><value><fullName>Override</fullName><default>false</default><label>Override</label></value></valueSetDefinition></valueSet>
    <description>Commission type</description>
</CustomField>