force-app/main/default/objects/DD_Commission__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <type>Date</type>
    <description>Commission period</description>
</CustomField>