force-app/main/default/objects/DD_Commission__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <type>Lookup</type>
    <referenceTo>DD_Policy__c</referenceTo><relationshipLabel>Commissions</relationshipLabel><relationshipName>Commissions_Pol</relationshipName><required>true</required>
    <description>Associated policy</description>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>