force-app/main/default/objects/DD_Commission__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <label>Producer</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo><relationshipLabel>Commissions as Producer</relationshipLabel><relationshipName>Commissions_Prod</relationshipName><required>true</required>
    <description>Broker/agent account</description>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>