force-app/main/default/objects/DD_Commission__c/fields/Rate_Pct__c.field-meta.xml
<CustomField>
    <fullName>Rate_Pct__c</fullName>
    <label>Rate Pct</label>
    <type>Percent</type>
    <precision>5</precision><scale>0</scale><required>false</required>
    <description>Commission rate percentage</description>
</CustomField>