force-app/main/default/objects/DD_Commission__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Calculated</fullName><default>false</default><label>Calculated</label></value><value><fullName>Approved</fullName><default>false</default><label>Approved</label></value><value><fullName>Paid</fullName><default>false</default><label>Paid</label></value></valueSetDefinition></valueSet>
    <description>Payment status</description>
</CustomField>