force-app/main/default/objects/DD_Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>NAME</columns>
    <columns>Policy__c</columns>
    <columns>Producer__c</columns>
    <columns>Commission_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Amount__c</columns>
</ListView>